// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionInspector show nothing 1`] = `null`;

exports[`ExtensionInspector show start button 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    启 动
  </span>
</button>
`;

exports[`ExtensionInspector show unstart button 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    取消启动
  </span>
</button>
`;
